# Aind.Behavior.JustFrames

./: .gitignore  README.md  clabe_default.yml  pyproject.toml
.github/workflows/: just-frames-cicd.yml
assets/: zmq_architecture.drawio
bonsai/: Bonsai.config
docs/: conf.py  json-schemas.rst
examples/: clabe.yml  examples.py  experiment.py  launcher.py
scripts/: experiment.py
src/: Extensions.csproj  main.bonsai  satellite.bonsai  test_deserialization.bonsai
src/DataSchemas/: aind_behavior_just_frames.json  aind_physiology_fip_message_protocol.json
src/DataSchemas/aind_behavior_video_encoding_benchmarks/: launcher.py
src/Extensions/: AindBehaviorJustFrames.Generated.cs  AindPhysiologyFipMessageProtocol.Generated.cs  BuildRegisteredMessage.cs  CameraQc.bonsai  Cameras.bonsai  HarpBehavior.bonsai  HarpDevices.bonsai  InstantitateTriggeredCameras.bonsai  Logging.bonsai  Main.bonsai  NetworkConfigToConnectionString.cs  SpinnakerCameraControllerSaturationVisualizer.bonsai  TriggeredCamerasLogger.bonsai  TryParseRegisteredMessage.cs  VerifyBroadcastResponse.cs  Visualizers.bonsai  ZeroMQ.bonsai
src/aind_behavior_just_frames/: cli.py  launcher.py  message_protocol.py  regenerate.py  rig.py
src/aind_behavior_just_frames/data_contract/: __init__.py  v0_5_0.py
src/aind_behavior_just_frames/data_qc/: __init__.py  data_qc.py
tests/: test_bonsai.py
